# myllamatui

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
src/: css_grid_setup.tcss  main.py
src/myllamacli/: chats.py  db_models.py  export_files.py  import_export_files.py  init_files.py  llm_calls.py  llm_models.py  main.py  prompts.py  setup_utils.py  shared_utils.py  topics_contexts.py  topics_contexts_categories.py  ui_file_screen.py  ui_modal_and_widgets.py  ui_modal_screens.py  ui_modal_widget.py  ui_screens_widgets.py  ui_settings_screen.py  ui_shared.py  ui_widgets_messages.py
src/myllamatui/: __main__.py  app.py  chats.py  db_models.py  import_export_files.py  init_files.py  llm_models.py  prompts.py  setup_utils.py  topics_contexts_categories.py  ui_file_screen.py  ui_modal_screens.py  ui_settings_screen.py  ui_shared.py
src/myllamatui/widgets_and_screens/: ui_file_screen.py  ui_modal_screens.py  ui_settings_screen.py  ui_widgets_messages.py
tests/: conftest.py  test_chats.py  test_db_models.py  test_import_export_files.py  test_init_files.py  test_llm_calls.py  test_llm_models.py  test_setup_utils.py  test_topics_context_categories.py
