[project]
name = "myllamatui"
version = "0.0.1"
description = "A terminal ui application that interfaces with ollama and allows you to chat with an LLM, store and acces chats and see some model information"
readme = "README.md"
authors = [{ name = "Andrew Cole", email = "376180+andrewscole@users.noreply.github.com" }]

requires-python = "==3.13.*"

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
    "peewee",
    "textual",
    "httpx",
    "mypy",
]

[dependency-groups]
dev = [
    "black",
    "pytest",
    "pytest-asyncio",
    "pytest-cov", 
    "flake8"
]

[mypy]
python-version = 3.13

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"